--- a/package.json
+++ b/package.json
@@ -19,16 +19,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@google/genai": "^0.14.1",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@mui/x-date-pickers": "^6.20.2",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
+    "date-fns": "^2.30.0",
+    "dexie": "^3.2.4",
     "dotenv": "^16.5.0",
+    "nostr-tools": "^2.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.51.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "recharts": "^2.12.2",
     "sonner": "^2.0.3",
