🚀 [CoomÜnity SuperApp] Major Implementation & Architecture Update - ✅ Integración completa con Backend NestJS (puerto 3002) - 🔐 Sistema de autenticación real con JWT - 🎯 Módulos Challenges, ÜPlay, Wallet, Groups completamente funcionales - 🎮 Interactive Video Player con gamificación avanzada - 📊 Sistema de Profile y estadísticas de usuario - 🎫 Flujo de invitación Beta completamente implementado - 📈 Playwright E2E testing suite (40+ tests) - 🛠️ Migración de mock data a Backend NestJS real - ⚡ Optimización de React Query para datos reales - 🔒 Sistema de manejo seguro de tokens JWT - 📱 UI/UX mejorada con Material UI + Tailwind CSS - 🌐 Port detector inteligente para desarrollo - 📚 Documentación arquitectural completa - 🎯 Reglas de desarrollo actualizadas y definitivas - 📊 Diagramas Mermaid de arquitectura del sistema - Este commit marca un hito importante: transición completa de mocks temporales a sistema integrado y robusto con Backend NestJS compartido

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -15,9 +15,9 @@
     "test:coverage": "vitest --coverage",
     "type-check": "tsc --noEmit",
     "type-check:skip": "echo '⚠️  TypeScript check skipped due to MUI Grid API changes'",
-    "test:ux": "playwright test --config=../../playwright.config.ts",
-    "test:ux:watch": "playwright test --config=../../playwright.config.ts --headed --debug",
-    "test:ux:report": "playwright show-report ../../test-results/html-report",
+    "test:ux": "playwright test",
+    "test:ux:watch": "playwright test --headed --debug",
+    "test:ux:report": "playwright show-report playwright-report",
     "test:ci": "npm run lint:strict && npm run type-check && npm run build:prod && npm run test:ux",
     "qa:full": "npm run build && echo '✅ QA Full: Build completado exitosamente'",
     "qa:dev": "npm run type-check:skip && npm run build && echo '✅ QA Dev: Desarrollo listo'",
@@ -27,18 +27,31 @@
     "features:status": "echo '🚩 Feature Flags Status: Available in development mode'",
     "analytics:health": "echo '📊 Analytics Health: Services configured and ready'",
     "backend:health": "echo '🔗 Backend Health: Integration services available'",
-    "metrics:dashboard": "echo '📊 Opening metrics dashboard...' && open http://localhost:3000/admin/metrics",
+    "metrics:dashboard": "echo '📊 Opening metrics dashboard...' && open http://localhost:3001/admin/metrics",
     "status": "echo '🚀 CoomÜnity SuperApp Status:' && npm run features:status && npm run analytics:health && npm run backend:health",
+    "test:auto": "node scripts/test-with-port-detection.cjs",
+    "test:auto:headless": "node scripts/test-with-port-detection.cjs --headless",
+    "test:auto:debug": "node scripts/test-with-port-detection.cjs --debug",
+    "test:e2e": "playwright test --project=chromium --headed",
+    "test:e2e:headless": "playwright test",
+    "test:debug": "playwright test --debug",
+    "test:ui": "playwright test --ui",
     "test:monitoring": "playwright test monitoring-verification-fixed.spec.ts --project=chromium",
     "test:monitoring:quick": "playwright test monitoring-verification-fixed.spec.ts --project=chromium --grep='Complete Monitoring Stack Integration' --reporter=line",
     "verify:monitoring": "./scripts/verify-monitoring.sh",
     "monitoring:status": "echo '🔍 Monitoring Status:' && npm run verify:monitoring",
-    "test:auto": "node scripts/test-with-port-detection.cjs",
-    "test:auto:file": "node scripts/test-with-port-detection.cjs",
-    "test:auto:headless": "node scripts/test-with-port-detection.cjs --headless",
-    "test:auto:debug": "node scripts/test-with-port-detection.cjs --debug",
-    "test:smart": "node scripts/test-with-port-detection.cjs",
-    "test:port-detect": "node scripts/test-with-port-detection.cjs"
+    "backend:check": "curl -f http://localhost:3002/health || echo '❌ Backend not running on port 3002'",
+    "admin:check": "curl -f http://localhost:3000 -s > /dev/null && echo '✅ Gamifier Admin (3000): OK' || echo '❌ Gamifier Admin (3000): NOT RUNNING'",
+    "superapp:check": "curl -f http://localhost:3001 -s > /dev/null && echo '✅ SuperApp (3001): OK' || echo '❌ SuperApp (3001): NOT RUNNING'",
+    "services:verify": "npm run backend:check && npm run admin:check && npm run superapp:check",
+    "ecosystem:status": "echo '🌐 Services Status:' && npm run services:verify",
+    "dev:full": "echo '🚀 Starting SuperApp...' && echo '⚠️  Make sure Backend is running on port 3002!' && npm run dev",
+    "dev:with-admin": "echo '🚀 Starting SuperApp with Admin support...' && echo '⚠️  Start Gamifier Admin: cd ../../../admin-frontend && npm run dev' && npm run dev",
+    "dev:ecosystem": "echo '🌐 For full ecosystem development:' && echo '📌 From root: npm run dev:fullstack' && echo '🎯 Starting SuperApp only...' && npm run dev",
+    "admin:open": "echo '🔗 Opening Gamifier Admin...' && open http://localhost:3000",
+    "superapp:open": "echo '🔗 Opening SuperApp...' && open http://localhost:3001",
+    "backend:open": "echo '🔗 Opening Backend API docs...' && open http://localhost:3002/api",
+    "help:ecosystem": "echo '📋 CoomÜnity Ecosystem Development:' && echo '' && echo '🏠 FROM ROOT (../../..):' && echo '  🌐 npm run dev:fullstack          - Start Backend + Admin + SuperApp' && echo '  🔗 npm run dev:backend-admin      - Start Backend + Admin only' && echo '  🔗 npm run dev:admin-superapp     - Start Admin + SuperApp only' && echo '  🚀 npm run dev:admin              - Start Gamifier Admin only' && echo '  🚀 npm run dev:backend            - Start Backend only' && echo '  ✅ npm run ecosystem:status       - Check all services' && echo '' && echo '📱 FROM SUPERAPP (here):' && echo '  🚀 npm run dev                    - Start SuperApp only' && echo '  🔗 npm run dev:with-admin         - SuperApp with Admin instructions' && echo '  🌐 npm run ecosystem:status       - Check all services' && echo '  🔗 npm run admin:open             - Open Admin in browser' && echo '' && echo '📂 Expected structure:' && echo '  admin-frontend/     - Gamifier Admin (port 3000)' && echo '  backend/           - NestJS Backend (port 3002)' && echo '  Demo/apps/superapp-unified/ - SuperApp (port 3001)'"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
