--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "build:prod": "turbo run build:prod",
     "dev": "turbo run dev",
     "dev:superapp": "turbo run dev --filter=coomunity-superapp",
+    "dev:admin": "cd admin-frontend && npm run dev",
+    "dev:backend": "cd backend && npm run dev",
+    "dev:fullstack": "concurrently \"npm run dev:backend\" \"npm run dev:admin\" \"npm run dev:superapp\" --names \"backend,admin,superapp\" --prefix-colors \"red,blue,green\"",
+    "dev:admin-superapp": "concurrently \"npm run dev:admin\" \"npm run dev:superapp\" --names \"admin,superapp\" --prefix-colors \"blue,green\"",
+    "dev:backend-superapp": "concurrently \"npm run dev:backend\" \"npm run dev:superapp\" --names \"backend,superapp\" --prefix-colors \"red,green\"",
+    "dev:backend-admin": "concurrently \"npm run dev:backend\" \"npm run dev:admin\" --names \"backend,admin\" --prefix-colors \"red,blue\"",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "test": "turbo run test",
@@ -29,7 +35,7 @@
     "preview": "turbo run preview",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "postinstall": "turbo generate workspace --copy --destination=./Demo/apps/superapp-unified --name=coomunity-superapp",
+    "_postinstall_disabled": "turbo generate workspace --copy --destination=./Demo/apps/superapp-unified --name=coomunity-superapp",
     "workspace:add": "turbo generate workspace",
     "db:seed": "cd Demo && ts-node prisma/seed.ts",
     "db:reset": "cd Demo && npx prisma migrate reset",
@@ -42,6 +48,12 @@
     "e2e:debug": "cd Demo && playwright test --debug",
     "validate:production": "turbo run build:prod && turbo run test:ux",
     "status": "echo '🚀 CoomÜnity Monorepo Status:' && turbo run status",
+    "services:check": "npm run backend:check && npm run admin:check && npm run superapp:check",
+    "backend:check": "curl -f http://localhost:3002/health -s > /dev/null && echo '✅ Backend NestJS (3002): OK' || echo '❌ Backend NestJS (3002): NOT RUNNING'",
+    "admin:check": "curl -f http://localhost:3000 -s > /dev/null && echo '✅ Gamifier Admin (3000): OK' || echo '❌ Gamifier Admin (3000): NOT RUNNING'",
+    "superapp:check": "curl -f http://localhost:3001 -s > /dev/null && echo '✅ SuperApp (3001): OK' || echo '❌ SuperApp (3001): NOT RUNNING'",
+    "ecosystem:status": "echo '🌐 CoomÜnity Ecosystem Status:' && npm run services:check",
+    "help:admin": "echo '📋 Gamifier Admin Commands:' && echo '  🚀 npm run dev:admin              - Start Gamifier Admin only' && echo '  🌐 npm run dev:fullstack          - Start Backend + Admin + SuperApp' && echo '  🔗 npm run dev:backend-admin      - Start Backend + Admin only' && echo '  🔗 npm run dev:admin-superapp     - Start Admin + SuperApp only' && echo '  ✅ npm run admin:check            - Check if Admin is running' && echo '  🌐 npm run ecosystem:status       - Check all services status' && echo '' && echo '📂 Expected Gamifier Admin location: admin-frontend/' && echo '🌐 Expected port: 3000'",
     "docker:build": "./scripts/docker-build.sh",
     "docker:dev": "docker-compose -f docker/docker-compose.dev.yml up",
     "docker:prod": "docker-compose -f docker/docker-compose.prod.yml up",
@@ -123,7 +135,7 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@eslint/js": "^9.21.0",
     "@nestjs/testing": "^11.1.1",
-    "@playwright/test": "^1.42.1",
+    "@playwright/test": "^1.52.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
