feat(backend): Implement E.1-E.4 - Enable Challenges, Marketplace & Social Interactions - Habilitado ChallengesModule, implementado MarketplaceModule completo, implementado inicio del SocialModule, creado usuario E2E en seed, refactorizados hooks frontend para usar datos reales, actualizadas reglas Agente IA

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -68,6 +68,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.17.0",
     "gtag": "^1.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -75,6 +76,8 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.22.2",
+    "react-spring": "^10.0.1",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.1.0",
@@ -84,7 +87,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.28.0",
-    "@playwright/test": "^1.52.0",
+    "@playwright/test": "^1.53.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
