--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "turbo run dev",
     "dev:superapp": "turbo run dev --filter=coomunity-superapp",
     "dev:admin": "cd admin-frontend && npm run dev",
-    "dev:backend": "cd backend && npm run dev",
+    "dev:backend": "npx tsx watch --no-cache --clear-screen=false --tsconfig tsconfig.backend.json src/main.ts",
     "dev:fullstack": "concurrently \"npm run dev:backend\" \"npm run dev:admin\" \"npm run dev:superapp\" --names \"backend,admin,superapp\" --prefix-colors \"red,blue,green\"",
     "dev:admin-superapp": "concurrently \"npm run dev:admin\" \"npm run dev:superapp\" --names \"admin,superapp\" --prefix-colors \"blue,green\"",
     "dev:backend-superapp": "concurrently \"npm run dev:backend\" \"npm run dev:superapp\" --names \"backend,superapp\" --prefix-colors \"red,green\"",
@@ -37,12 +37,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "_postinstall_disabled": "turbo generate workspace --copy --destination=./Demo/apps/superapp-unified --name=coomunity-superapp",
     "workspace:add": "turbo generate workspace",
-    "db:seed": "cd Demo && ts-node prisma/seed.ts",
-    "db:reset": "cd Demo && npx prisma migrate reset",
-    "start:backend": "cd Demo && node dist/main.js",
-    "start:backend:dev": "cd Demo && tsx watch --no-cache --clear-screen=false --tsconfig tsconfig.backend.json src/main.ts",
-    "start:backend:prod": "cd Demo && npm run clean:backend && npm run build:backend && node dist/main.js",
-    "build:backend": "cd Demo && tsc -p tsconfig.backend.json",
+    "db:seed": "ts-node prisma/seed.ts",
+    "db:reset": "npx prisma migrate reset",
+    "start:backend": "node dist/main.js",
+    "start:backend:dev": "npx tsx watch --no-cache --clear-screen=false --tsconfig tsconfig.backend.json src/main.ts",
+    "start:backend:prod": "npm run clean:backend && npm run build:backend && node dist/main.js",
+    "build:backend": "tsc -p tsconfig.backend.json",
     "e2e": "turbo run test:ux",
     "e2e:ui": "cd Demo && playwright test --ui",
     "e2e:debug": "cd Demo && playwright test --debug",
