--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_GOOGLE_AI_API_KEY=AIzaSyDXMoHjoHi8-xUfiD5QN6bFVIeoTMhK2z4
 VITE_API_BASE_URL=http://localhost:3002
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://kevinp:gamifier123@localhost:5432/gamifier_db"
 JWT_SECRET=gamifier_jwt_secret_key_2025
 REDIS_HOST=localhost
 REDIS_PORT=6379
