--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -76,6 +76,7 @@
     "@mui/system": "^7.1.1",
     "@sentry/browser": "^8.55.0",
     "@sentry/react": "^8.55.0",
+    "@sentry/vite-plugin": "^3.5.0",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.80.7",
     "clsx": "^2.1.1",
@@ -83,8 +84,8 @@
     "framer-motion": "^12.17.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.53.0",
     "react-player": "^2.16.0",
@@ -98,8 +99,8 @@
   "devDependencies": {
     "@eslint/js": "^9.28.0",
     "@playwright/test": "^1.53.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
