feat: Comprehensive ecosystem improvements and Cursor agents integration - Added complete service layer for SuperApp with 20+ new services - Enhanced E2E testing with navigation discovery and wait strategies - Integrated Cursor agents with Slack configuration and MCP setup - Improved Docker configuration and production deployment setup

--- a/backend/Dockerfile.simple
+++ b/backend/Dockerfile.simple
@@ -1,34 +1,46 @@
 # ================================================================
-# CoomÜnity Backend NestJS - Dockerfile Simplificado
-# Para pruebas de deployment sin descargas adicionales
+# CoomÜnity Backend NestJS - Dockerfile Simplificado Final
+# Para deployment con generación de Prisma en contenedor
 # ================================================================
 
 FROM node:18-alpine
 
+# Instalar dependencias del sistema necesarias
+RUN apk add --no-cache libc6-compat openssl
+
 # Metadatos del contenedor
 LABEL maintainer="CoomÜnity Team"
-LABEL version="1.0.0"
-LABEL description="CoomÜnity Backend NestJS - Simplified"
+LABEL version="1.0.3"
+LABEL description="CoomÜnity Backend NestJS - Final Version"
 
 # Establecer directorio de trabajo
 WORKDIR /app
 
-# Copiar archivos de configuración de dependencias
+# Copiar archivos de configuración de dependencias desde la raíz del monorepo
 COPY package*.json ./
-COPY tsconfig*.json ./
 
-# Instalar dependencias básicas con legacy-peer-deps para MUI v7
-RUN npm ci --legacy-peer-deps --ignore-scripts || npm install --legacy-peer-deps --ignore-scripts
+# Instalar TODAS las dependencias (incluyendo devDependencies para Prisma)
+RUN npm ci --legacy-peer-deps
 
-# Copiar código fuente
-COPY src/ ./src/
+# Copiar el código ya compilado
+COPY dist/ ./dist/
 COPY prisma/ ./prisma/
 
-# Generar cliente de Prisma (intentar sin fallar)
-RUN npx prisma generate || echo "Prisma generate failed, continuing..."
+# Generar cliente de Prisma con todas las dependencias disponibles
+RUN npx prisma generate
 
-# Compilar la aplicación TypeScript
-RUN npm run build || echo "Build failed, using fallback..."
+# Verificar que el cliente de Prisma se generó correctamente
+RUN ls -la node_modules/@prisma/ && ls -la node_modules/.prisma/
+
+# Crear usuario no-root para seguridad
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S backend -u 1001 -G nodejs
+
+# Cambiar ownership del directorio de la app
+RUN chown -R backend:nodejs /app
+
+# Cambiar a usuario no-root
+USER backend
 
 # Exponer puerto de la aplicación
 EXPOSE 3002
@@ -37,5 +49,9 @@ EXPOSE 3002
 ENV NODE_ENV=production
 ENV PORT=3002
 
-# Comando de inicio (con fallback)
-CMD ["npm", "start"] 
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3002/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })" || exit 1
+
+# Comando de inicio usando el archivo compilado correcto
+CMD ["node", "dist/src/main.js"] 
