--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -92,6 +92,7 @@
     "react-router-dom": "^6.22.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
+    "use-sync-external-store": "^1.5.0",
     "web-vitals": "^4.2.4",
     "zod": "^3.23.8",
     "zustand": "^4.5.7"
