--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,45 @@ accessibility-*.json
 audit-*.json
 *-audit-*.md
 *-report-*.md
+
+# ⚡ PERFORMANCE OPTIMIZATION
+# Heavy directories that slow down file watcher
+Demo/data/backups/
+_temp_frontend_src_files/
+src_mixed_backup/
+test-results/
+playwright-report/
+assets/screenshots/
+coverage/
+.nyc_output/
+.vscode-test/
+tmp/
+temp/
+
+# Build and cache directories
+build/
+.next/
+.cache/
+.turbo/
+.parcel-cache/
+
+# OS generated files
+Thumbs.db
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+
+# IDE specific files
+*.swp
+*.swo
+*~
+.project
+.metadata
+.classpath
+.c9/
+*.launch
+.settings/
+.vscode/settings.json.bak
