🚀 Dashboard Home Revolutionary: Sistema Solar 3D Ayni + Componentes Universe + Material UI Profile A+ (96/100)

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -85,7 +85,9 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.17.0",
     "immer": "^10.1.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
+    "mathjs": "^14.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
@@ -103,6 +105,7 @@
     "@builder.io/dev-tools": "^1.6.108",
     "@eslint/js": "^9.28.0",
     "@playwright/test": "^1.53.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
