🎯 ANÁLISIS CRÍTICO: Mock Data Blocking Visual Effects + Background Agent Configuration - Identificados 100+ archivos con datos mock bloqueando Cosmic Design System - Script analyze-mock-data-blocking.sh + reportes detallados - Archivos críticos: marketplaceMockData.ts (969 líneas), useRealBackendData.ts (93 líneas bypass), lets-mock-service.ts (34 líneas) - Background Agent configurado con patrones específicos y MAX mode - Plan de eliminación faseado documentado - Ready for Background Agent execution

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -94,6 +94,7 @@
     "react-hook-form": "^7.53.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.2",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "use-sync-external-store": "^1.5.0",
