--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
     "dev:admin": "turbo run dev --filter=@coomunity/admin-frontend",
     "dev:fullstack": "./scripts/start-all.sh",
     "dev:builder": "cd Demo/apps/superapp-unified && npx builder.io@latest launch",
+    "dev:smart": "./scripts/dev-port-manager.sh",
+    "dev:superapp-only": "./scripts/dev-port-manager.sh superapp",
+    "dev:admin-only": "./scripts/dev-port-manager.sh admin",
+    "dev:backend-only": "./scripts/dev-port-manager.sh backend",
+    "dev:both-frontends": "./scripts/dev-port-manager.sh both-frontends",
+    "port:status": "./scripts/dev-port-manager.sh status",
+    "port:clean": "./scripts/dev-port-manager.sh clean",
     "start:all": "./scripts/start-all.sh",
     "stop:all": "pkill -f 'vite|npm run dev|tsx' 2>/dev/null || true",
     "preflight": "./scripts/pre-flight-check.sh",
@@ -41,6 +48,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@builder.io/dev-tools": "latest",
+    "@builder.io/react": "latest",
+    "@builder.io/sdk": "latest",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@google/genai": "^0.14.1",
@@ -54,7 +64,9 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.1",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^5.22.0",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
@@ -84,14 +96,12 @@
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "socket.io": "^4.8.1",
     "sonner": "^2.0.3",
     "ts-node": "^10.9.2",
     "winston": "^3.17.0",
     "zod": "^3.22.4",
-    "zustand": "^5.0.3",
-    "@builder.io/dev-tools": "latest",
-    "@builder.io/react": "latest",
-    "@builder.io/sdk": "latest"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
