chore: Update environment configuration and add auth testing script - Update .env and .env.backup with latest configuration values - Add scripts/test-auth-flow.sh for authentication flow testing - Environment optimizations for development workflow

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_GOOGLE_AI_API_KEY=AIzaSyDXMoHjoHi8-xUfiD5QN6bFVIeoTMhK2z4
 VITE_API_BASE_URL=http://localhost:3002
-DATABASE_URL="postgresql://temp:temp@localhost:5432/temp_db"
+DATABASE_URL="postgresql://kevinp@localhost:5432/gamifier_db"
 JWT_SECRET="tu_jwt_secret_super_secreto_para_desarrollo_local_2024"
 JWT_EXPIRES_IN="7d"
 REDIS_HOST=localhost
