--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -96,6 +96,7 @@
     "react-hook-form": "^7.58.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.2",
+    "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
