--- a/backend/package.json
+++ b/backend/package.json
@@ -28,16 +28,17 @@
     "migration:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.1",
-    "@nestjs/core": "^11.1.1",
+    "@nestjs/common": "^11.1.3",
+    "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^11.1.1",
-    "@nestjs/platform-socket.io": "^11.1.1",
+    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^11.1.1",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^5.22.0",
+    "@types/node-fetch": "^2.6.12",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -45,9 +46,12 @@
     "helmet": "^8.0.0",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "prom-client": "^15.1.3",
+    "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
@@ -55,9 +59,9 @@
     "winston": "^3.15.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.1.1",
-    "@nestjs/schematics": "^11.1.1",
-    "@nestjs/testing": "^11.1.1",
+    "@nestjs/cli": "^11.0.7",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -95,4 +99,4 @@
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
-} 
+}
