--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -73,14 +73,16 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^7.0.1",
-    "@mui/lab": "^7.0.0-beta.13",
-    "@mui/material": "^7.0.1",
-    "@mui/system": "^7.1.1",
+    "@mui/lab": "^7.0.0-beta.4",
+    "@mui/material": "^7.0.0",
+    "@mui/system": "^7.0.0",
     "@sentry/browser": "^8.55.0",
     "@sentry/react": "^8.55.0",
     "@sentry/vite-plugin": "^3.5.0",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.80.7",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.0.5",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -94,6 +96,7 @@
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.58.1",
+    "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.3",
