--- a/Demo/apps/superapp-unified/tsconfig.node.json
+++ b/Demo/apps/superapp-unified/tsconfig.node.json
@@ -4,13 +4,13 @@
     "lib": ["ES2022"],
     "module": "ESNext",
     "skipLibCheck": true,
-    "composite": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
+    "noEmit": true,
 
     /* Linting */
     "strict": true,
@@ -20,4 +20,4 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["vite.config.ts"]
-} 
+}
