--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coomunity-superapp",
+  "name": "d-i-o-s",
   "version": "1.0.0",
   "type": "module",
   "description": "CoomÜnity SuperApp - Plataforma Unificada",
