--- a/package.json
+++ b/package.json
@@ -12,25 +12,29 @@
     "dev": "turbo run dev",
     "dev:backend": "npm run start:backend:dev",
     "dev:frontend": "turbo run dev",
-    "dev:superapp": "npm run dev --workspace=coomunity-superapp",
+    "dev:superapp": "npm run dev --workspace=d-i-o-s",
     "dev:admin": "turbo run dev --filter=@coomunity/admin-frontend",
+    "dev:superapp-only": "NODE_OPTIONS='--max-old-space-size=4096 --max-old-space-size=4096' npm run dev --workspace=d-i-o-s",
+    "dev:superapp-safe": "echo '🚨 STARTING SUPERAPP IN EMFILE-SAFE MODE...' && NODE_OPTIONS='--max-old-space-size=8192' VITE_OPTIMIZE_DEPS_DISABLED=true npm run dev --workspace=d-i-o-s",
+    "dev:admin-only": "turbo run dev --filter=@coomunity/admin-frontend",
+    "dev:safe": "echo '🚨 STARTING INDIVIDUAL SERVICES TO PREVENT EMFILE' && echo '✅ Use: npm run dev:superapp-safe (for SuperApp - EMFILE protected)' && echo '✅ Use: npm run dev:admin-only (for Admin)' && echo '✅ Use: npm run dev:backend (for Backend)' && echo '❌ AVOID: npm run dev (starts both frontends - causes EMFILE)'",
     "dev:fullstack": "./scripts/start-all.sh",
     "dev:builder": "cd Demo/apps/superapp-unified && npx builder.io@latest launch",
     "dev:smart": "./scripts/dev-port-manager.sh",
-    "dev:superapp-only": "./scripts/dev-port-manager.sh superapp",
-    "dev:admin-only": "./scripts/dev-port-manager.sh admin",
     "dev:backend-only": "./scripts/dev-port-manager.sh backend",
     "dev:both-frontends": "./scripts/dev-port-manager.sh both-frontends",
     "port:status": "./scripts/dev-port-manager.sh status",
     "port:clean": "./scripts/dev-port-manager.sh clean",
     "start:all": "./scripts/start-all.sh",
     "stop:all": "pkill -f 'vite|npm run dev|tsx' 2>/dev/null || true",
+    "emfile:help": "echo '🚨 GUÍA ANTI-EMFILE - CoomÜnity SuperApp' && echo '=========================================' && echo '' && echo '✅ COMANDOS SEGUROS (EMFILE-PROTECTED):' && echo '  npm run dev:superapp-safe     - SuperApp con protección EMFILE' && echo '  npm run dev:admin-only        - Solo Gamifier Admin' && echo '  npm run dev:backend           - Solo Backend NestJS' && echo '' && echo '⚠️  COMANDOS PROBLEMÁTICOS (EVITAR):' && echo '  npm run dev                   - Inicia ambos frontends (EMFILE)' && echo '  npm run dev:superapp-only     - Puede causar EMFILE en MUI icons' && echo '' && echo '🌐 DEPLOYMENT (FUNCIONANDO):' && echo '  Vercel: https://superapp-peach.vercel.app/' && echo '  Status: ✅ Ready (optimizado para producción)' && echo '' && echo '🔧 DIAGNÓSTICO:' && echo '  npm run emfile:diagnose       - Analizar sistema' && echo '  ./scripts/fix-emfile-and-restart.sh - Solución completa' && echo '' && echo '📱 ACCESO RÁPIDO:' && echo '  Backend:  http://localhost:3002' && echo '  SuperApp: http://localhost:3001' && echo '  Admin:    http://localhost:3000'",
+    "emfile:diagnose": "echo '🔍 DIAGNÓSTICO EMFILE' && echo '===================' && echo '' && echo '📊 File descriptors:' && lsof -n | wc -l && echo '📊 Límite sistema:' && ulimit -n && echo '' && echo '🔍 Procesos activos:' && ps aux | grep -E '(vite|npm|turbo)' | grep -v grep && echo '' && echo '🌐 Puertos ocupados:' && lsof -i :3000,3001,3002,3003,5173 2>/dev/null || echo 'Ningún puerto ocupado' && echo '' && echo '🗄️ Backend status:' && curl -s http://localhost:3002/health | jq -r '.status' 2>/dev/null || echo 'Backend no disponible'",
     "preflight": "./scripts/pre-flight-check.sh",
     "preflight:quick": "./preflight",
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "test:e2e": "npm run test:e2e --workspace=coomunity-superapp",
+    "test:e2e": "npm run test:e2e --workspace=d-i-o-s",
     "clean-vite-cache": "rm -rf node_modules/.vite",
     "clean:backend": "rm -rf dist",
     "clean:processes": "npm run stop:all",
@@ -42,7 +46,8 @@
     "start:backend:compiled": "npm run build:backend && cp -r backend/src/generated dist/ && node dist/main.js",
     "build:backend": "tsc -p tsconfig.backend.json",
     "mock-cleanup-agent": "node scripts/mock-cleanup-background-agent.js",
-    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js"
+    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js",
+    "emfile:fix": "./scripts/fix-emfile-and-restart.sh"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
