--- a/Demo/apps/superapp-unified/.env.production
+++ b/Demo/apps/superapp-unified/.env.production
@@ -1,1 +1,4 @@
-VITE_API_BASE_URL=https://api.coomunity.com
+VITE_API_BASE_URL=
+VITE_ENABLE_MOCK_AUTH=true
+VITE_ENABLE_MOCK_DATA=true
+VITE_BASE_URL=https://superapp-peach.vercel.app
