--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,13 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "nest build",
+    "build:nocheck": "nest build --skip-project-check",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:render": "npm run db:migrate && npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,6 +26,7 @@
     "db:reset": "prisma migrate reset --force",
     "db:seed": "npx ts-node prisma/seed.ts",
     "db:studio": "prisma studio",
+    "db:migrate": "prisma migrate deploy",
     "migration:generate": "prisma migrate dev",
     "migration:deploy": "prisma migrate deploy"
   },
