--- a/backend/package.json
+++ b/backend/package.json
@@ -59,6 +59,7 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
+    "typescript": "^5.7.2",
     "winston": "^3.15.0"
   },
   "devDependencies": {
@@ -82,8 +83,7 @@
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2"
+    "tsconfig-paths": "^4.2.0"
   },
   "jest": {
     "moduleFileExtensions": [
