--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,14 @@
   "private": true,
   "license": "MIT",
   "main": "dist/main.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "build": "nest build",
     "build:nocheck": "nest build --skip-project-check",
-    "build:render": "npx tsc --skipLibCheck --outDir dist",
+    "build:render": "nest build --skip-project-check || npx tsc --skipLibCheck --outDir dist",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -61,10 +65,10 @@
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "typescript": "^5.7.2",
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "@nestjs/cli": "^11.0.7"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.3",
     "@types/bcryptjs": "^2.4.6",
